--- a/src/css/nav.less
+++ b/src/css/nav.less
@@ -87,7 +87,7 @@
         top: 86px;
 
         @media only screen and (min-width: 409px) {
-            top: 66px;
+            top: 62px;
         }
 
         @media @tablet-up {
